@@ -11,6 +11,8 @@ James Riechel
     Various changes for his Unlimited Atlantis code
 Stefan Morrell
     The patch for Apprentices/revamping Lacandon Conquest
+Steve
+    Pointed out a but in the easier underworld code.
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
